// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`risingEdge instruction compiler > compiles the rising edge segment 1`] = `
{
  "locals": {
    "__risingEdgeDetector_currentValue4": {
      "index": 0,
      "isInteger": true,
    },
  },
  "byteCode": [
    33,
    0,
    32,
    0,
    65,
    0,
    40,
    2,
    0,
    74,
    4,
    127,
    65,
    1,
    5,
    65,
    0,
    11,
    65,
    0,
    32,
    0,
    54,
    2,
    0,
  ],
  "memory": {
    "__risingEdgeDetector_previousValue4": {
      "byteAddress": 0,
      "default": 0,
      "elementWordSize": 4,
      "id": "__risingEdgeDetector_previousValue4",
      "isInteger": true,
      "isPointer": false,
      "isPointingToInteger": false,
      "isPointingToPointer": false,
      "isUnsigned": false,
      "numberOfElements": 1,
      "type": "int",
      "wordAlignedAddress": 0,
      "wordAlignedSize": 1,
    },
  },
  "stack": [
    {
      "isInteger": true,
      "isNonZero": false,
    },
  ],
}
`;

exports[`risingEdge instruction compiler > compiles the rising edge segment for float operands 1`] = `
{
  "locals": {
    "__risingEdgeDetector_currentValue4": {
      "index": 0,
      "isInteger": false,
    },
  },
  "byteCode": [
    33,
    0,
    32,
    0,
    65,
    0,
    42,
    2,
    0,
    94,
    4,
    127,
    65,
    1,
    5,
    65,
    0,
    11,
    65,
    0,
    32,
    0,
    56,
    2,
    0,
  ],
  "memory": {
    "__risingEdgeDetector_previousValue4": {
      "byteAddress": 0,
      "default": 0,
      "elementWordSize": 4,
      "id": "__risingEdgeDetector_previousValue4",
      "isInteger": false,
      "isPointer": false,
      "isPointingToInteger": false,
      "isPointingToPointer": false,
      "isUnsigned": false,
      "numberOfElements": 1,
      "type": "float",
      "wordAlignedAddress": 0,
      "wordAlignedSize": 1,
    },
  },
  "stack": [
    {
      "isInteger": true,
      "isNonZero": false,
    },
  ],
}
`;
